--- a/caravan/style.css
+++ b/caravan/style.css
@@ -5,6 +5,28 @@
   box-sizing: border-box;
 }
 
+header {
+  width: 90%;
+  padding: 15px 0;
+  margin: 0 auto;
+  text-align: center;
+}
+
+header .heading {
+  font-size: 32px;
+}
+
+.nav-list {
+  text-align: center;
+  padding: 10px 0;
+  margin: 0 auto;
+}
+
+.nav-list-item {
+  list-style: none;
+  display: inline-block;
+  margin: 0 20px;
+}
 
 .main-visual {
   width: 100%;
@@ -31,4 +53,9 @@
 .sidebar {
   width: 240px;
   height: 1400px;
+}
+
+footer {
+  width: 100%;
+  height: 120px;
 }
