--- a/caravan/style.css
+++ b/caravan/style.css
@@ -3,6 +3,11 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  color: #6c6b6b;
+}
+
+a {
+  text-decoration: none;
 }
 
 header {
@@ -36,6 +41,7 @@ header .heading {
 .main-visual-content {
   width: 350px;
   height: 300px;
+  
 }
 
 .main {
@@ -58,4 +64,11 @@ header .heading {
 footer {
   width: 100%;
   height: 120px;
+  text-align: center;
+  line-height: 120px;
+  background-color: #848282;
+}
+
+.footer-text {
+  color: #fff;
 }
